feat: canvas types, draw function

--- a/src/components/canvas/canvas.scss
+++ b/src/components/canvas/canvas.scss
@@ -1,5 +1,6 @@
 .canvas {
-    width: 500px;
-    height: 500px;
-    border: 3px solid green;
+    width: 512px;
+    height: 512px;
+    border: 1px solid green;
+    margin: 0 auto;
 }
